fix!: Changed how Messages resolves its paths. It now uses baseDir from the HTTPContext.